# agent-scaling

./: .gitignore  DATA_AVAILABILITY.md  README.md  REPRODUCTION.md  pyproject.toml
agent_scaling/: exp_runner.py
agent_scaling/agents/: multiagent_decentralized.py  multiagent_hybrid.py  multiagent_independent.py  single_agent.py
agent_scaling/agents/multiagent_components/: mas_lead_agent.py  mas_subagent.py
agent_scaling/config/: llm.py  run.py
agent_scaling/datasets/: __init__.py  swebench.py  swebench_loader.py  terminalbench.py  terminalbench_loader.py
agent_scaling/env/: __init__.py  docker_utils.py  swebench.py  terminalbench.py
agent_scaling/llm/: litellm_lc.py
analysis/: alternative_capability_metric.py  error_amplification_analysis.py  extended_mixed_effects_6benchmarks.py
example_traces/swebench-verified/single-agent/: dataset_eval_metrics.json  run_config.yaml
example_traces/swebench-verified/single-agent/instance_runs/0000/: instance_save.yaml
prompts/dataset-shared/: swebench.yaml  terminalbench.yaml
run_conf/agent/: multi-agent-centralized.yaml  multi-agent-decentralized.yaml  multi-agent-hybrid.yaml  multi-agent-independent.yaml
run_conf/dataset/: swebench-verified.yaml  terminalbench.yaml
scripts/: alternative_capability_metric.py  error_amplification_analysis.py  extended_mixed_effects_6benchmarks.py  heterogeneous_agent_analysis.py  parse_logs.py  per_instance_results_swe_tb.csv  run_experiment.py
